--- a/src/templates/@layout.handlebars
+++ b/src/templates/@layout.handlebars
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://rawgithub.com/lipis/flag-icon-css/master/css/flag-icon.css">
-    <style>
-      button{display:none}
-    </style>
+    <link rel="stylesheet" href="{{config.base_url}}style/style.css">
   </head>
   <body>
-<script>DONT_TRANSITION=1</script>
+    <script>
+      var __ladders = {{json ladders}};
+    </script>
     <script type="text/x-handlebars">
       <div class="container">
         {{{content}}}
@@ -33,6 +33,7 @@
     <script src="{{config.base_url}}js/lib/jquery/dist/jquery.js"></script>
     <script src="{{config.base_url}}js/lib/handlebars/handlebars.js"></script>
     <script src="{{config.base_url}}js/lib/ember/ember.js"></script>
+    <script src="{{config.base_url}}js/lib/moment/moment.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="{{config.base_url}}js/app.js"></script>
