--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -1,1 +1,1 @@
-.chat .message .system{font-style:italic;color:#777}
+.game-room{position:absolute;top:0;bottom:0;left:0;right:0}.game-room .players{position:absolute;top:70px;left:0;bottom:0}.game-room .chat{position:absolute;right:0;top:70px;bottom:0}.game-room .chat .message .system{font-style:italic;color:#777}.game-room .chat .input-group{position:absolute;bottom:10px}.game-room-summary .list-inline{margin-bottom:0}
