--- a/src/templates/@layout.handlebars
+++ b/src/templates/@layout.handlebars
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge;">
     <title>AoCMulti</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://rawgithub.com/lipis/flag-icon-css/master/css/flag-icon.css">
     <link rel="stylesheet" href="{{config.base_url}}style/style.css">
@@ -34,12 +33,21 @@
     <script type="text/x-handlebars" id="chat-message">
       {{{template "chat-message"}}}
     </script>
+    <script type="text/x-handlebars" id="chatbox">
+      {{{template "chatbox"}}}
+    </script>
+    <script type="text/x-handlebars" id="mods">
+      {{{template "mods"}}}
+    </script>
+    <script type="text/x-handlebars" id="loading">
+      {{{template "loading"}}}
+    </script>
     <script src="{{config.base_url}}js/lib/jquery/dist/jquery.js"></script>
     <script src="{{config.base_url}}js/lib/handlebars/handlebars.js"></script>
     <script src="{{config.base_url}}js/lib/ember/ember.js"></script>
     <script src="{{config.base_url}}js/lib/moment/moment.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="{{config.base_url}}js/app.js"></script>
+    <script src="{{config.base_url}}js/build/app.js"></script>
   </body>
 </html>
