--- a/src/templates/game-room-summary.handlebars
+++ b/src/templates/game-room-summary.handlebars
@@ -1,55 +1,34 @@
-<div class="media hide">
-  <div class="pull-left">
-    <button class="media-object btn btn-primary" {{bind-attr disabled=full}} {{action "join" id}}>
-      {{#if full}} Full {{else}} Join {{/if}}
-    </button>
-  </div>
-  <div class="media-body">
-    <div class="row">
-      <div class="game-title col-lg-6">{{title}}</div>
-      <div class="game-ladder col-lg-3">{{ladder_name}}</div>
-    </div>
-    <div class="game-descr">
-      <ul class="list-inline">
-        <li><strong>Players:</strong></li>
-        {{#each players}}
-          {{view App.UsernameView tagName="li"}}
-        {{/each}}
-      </ul>
-    </div>
-  </div>
-</div>
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-5 col-md-5 col-sm-7">
+        {{#if locked}} <span class="fa fa-lock"></span> {{/if}}
         {{title}}
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-2 col-sm-5">
         {{players.length}}/{{max_players}}
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3 col-sm-7">
         {{ladder_name}}
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-2 col-sm-5">
         RM
       </div>
     </div>
   </div>
   <div class="panel-body">
-    <div class="row">
-      <div class="col-lg-9">
-        <ul class="list-inline">
-          {{#each players}}
-            {{view App.UsernameView tagName="li"}}
-          {{/each}}
-        </ul>
-      </div>
-      <div class="col-lg-3">
-        <button class="btn btn-primary pull-right" {{bind-attr disabled=full}} {{action "join" id}}>
-          {{#if full}} Full {{else}} Join {{/if}}
-        </button>
-      </div>
-    </div>
+    <button class="btn btn-primary pull-right" {{bind-attr disabled=full}} {{action "join" id}}>
+      {{#if full}}
+        Full
+      {{else}}
+        {{#if locked}} <span class="fa fa-lock"></span> {{/if}}
+        Join
+      {{/if}}
+    </button>
+    <ul class="list-inline">
+      {{#each players}}
+        {{view App.UsernameView tagName="li"}}
+      {{/each}}
+    </ul>
   </div>
 </div>
