--- a/src/templates/user-tooltip.handlebars
+++ b/src/templates/user-tooltip.handlebars
@@ -1,5 +1,8 @@
-<div class="user-tooltip hide">
-  <strong>{{username}}</strong>
+<div class="user-tooltip hide panel panel-default" style="height:auto; min-width:150px">
+  <header class="panel-heading">{{view App.UsernameView}}</header>
+  <div class="panel-body">
+    <strong class="text-success"><i class="fa fa-check-circle"></i> Online</strong>
+  </div>
   <table class="table">
     <thead>
       <tr> <th>Ladder</th> <th>ELO</th> </tr>
