--- a/src/templates/username.handlebars
+++ b/src/templates/username.handlebars
@@ -1,1 +1,1 @@
-<span {{bind-attr class=":flag-icon flagClassName"}}></span> {{username}}
+<span class="username" data-user-id="{{unbound id}}"><i {{bind-attr class=":flag-icon flagClassName"}}></i> {{username}}</span>
