--- a/src/templates/@login.handlebars
+++ b/src/templates/@login.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{config.base_url}}style/style.css">
   </head>
   <body>
-    <form class="form-horizontal" action="" method="post">
+    <form class="form-horizontal" action="{{config.base_url}}" method="post">
       <main class="modal" style="display:block">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -16,6 +16,9 @@
               <h1 class="modal-title">AoCMulti</h1>
             </header>
             <div class="modal-body">
+              <div class="alert alert-info">
+                To use this app, you need to have Javascript enabled, as well as first-party cookies (to save your login session).
+              </div>
               <div class="form-group">
                 <label for="server" class="col-sm-3 control-label">Server</label>
                 <div class="col-sm-9">
@@ -29,7 +32,7 @@
               <div class="form-group">
                 <label for="username" class="col-sm-3 control-label">Username</label>
                 <div class="col-sm-9">
-                  <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+                  <input type="text" name="username" id="username" class="form-control" placeholder="Username" autofocus>
                 </div>
               </div>
               <div class="form-group">
